--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "lightswind": "^3.1.16",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
